--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 </div>
               </div>
             </li>
-            <li class="timeline-inverted">
+            <!-- <li class="timeline-inverted">
               <div class="timeline-image">
                 <img class="rounded-circle img-fluid" src="img/about/2.jpg" alt="">
               </div>
@@ -212,7 +212,7 @@
                   <br>nossa
                   <br>história!</h4>
               </div>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
