--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
     <div class="container">
       <div class="row align-items-center">
         <div class="col-md-4">
-          <span class="copyright">Copyright &copy; Timbira Corporation Website 2019</span>
+          <span class="copyright">Adriano Mendes - Potifólio 2020</span>
         </div>
         <div class="col-md-4">
           <ul class="list-inline social-buttons">
@@ -295,7 +295,7 @@
             </li>
           </ul>
         </div>
-        <div class="col-md-4">
+        <!-- <div class="col-md-4">
           <ul class="list-inline quicklinks">
             <li class="list-inline-item">
               <a href="#">Política de Privacidade</a>
@@ -304,7 +304,7 @@
               <a href="#">Termos de uso</a>
             </li>
           </ul>
-        </div>
+        </div> -->
       </div>
     </div>
   </footer>
